Pushing to github

--- a/code/Ticks_and_Lyme_Disease.ipynb
+++ b/code/Ticks_and_Lyme_Disease.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
        "0"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,12 +94,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "def update_func(state, t, system):\n",
-    "    \"\"\"Update the SIR model.\n",
+    "    \"\"\"\n",
+    "    Update the SIR model.\n",
     "    \n",
     "    state: State (s, i, r, c, t)\n",
     "    t: time\n",
@@ -126,12 +127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_simulation(system, update_func):\n",
-    "    \"\"\"Runs a simulation of the system.\n",
+    "    \"\"\"\n",
+    "    Runs a simulation of the system.\n",
     "        \n",
     "    system: System object\n",
     "    update_func: function that updates state\n",
@@ -147,13 +149,15 @@
     "        frame.row[t+1] = update_func(frame.row[t], t, system)\n",
     "        if frame.row[t+1].C > 50:\n",
     "            break\n",
+    "            \n",
+    "    \"\"\"this keeps the function from running after the chronic line reaches 50\"\"\"\n",
     "    \n",
     "    return frame"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -170,87 +174,11 @@
     },
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>S</th>\n",
-       "      <th>I</th>\n",
-       "      <th>R</th>\n",
-       "      <th>C</th>\n",
-       "      <th>T</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0.0</th>\n",
-       "      <td>350</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1.0</th>\n",
-       "      <td>345.644</td>\n",
-       "      <td>4.3561</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2.0</th>\n",
-       "      <td>341.342</td>\n",
-       "      <td>-0.054216</td>\n",
-       "      <td>7.40537</td>\n",
-       "      <td>1.30683</td>\n",
-       "      <td>2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3.0</th>\n",
-       "      <td>337.094</td>\n",
-       "      <td>4.30256</td>\n",
-       "      <td>7.3132</td>\n",
-       "      <td>1.29057</td>\n",
-       "      <td>3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4.0</th>\n",
-       "      <td>332.898</td>\n",
-       "      <td>-0.107091</td>\n",
-       "      <td>14.6276</td>\n",
-       "      <td>2.58133</td>\n",
-       "      <td>4</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "           S         I        R        C  T\n",
-       "0.0      350         0        0        0  0\n",
-       "1.0  345.644    4.3561        0        0  1\n",
-       "2.0  341.342 -0.054216  7.40537  1.30683  2\n",
-       "3.0  337.094   4.30256   7.3132  1.29057  3\n",
-       "4.0  332.898 -0.107091  14.6276  2.58133  4"
+       "\"\\n\\nWe were able to collect almost all of our data\\nfrom the CDC's records on Ticks in Massachusetts. \\nWe struggled when it came to finding data on how \\noften Oliner's had a Tick scare every year. Instead\\nof making up numbers we sent out a survey on the \\n'HelpMe' mailing list, recieving just under 50 \\nresponses.\\n\\n\\n\""
       ]
      },
-     "execution_count": 130,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,15 +208,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_results(S, I, R, C):\n",
-    "    \"\"\"Plot the results of a SIR model.\n",
-    "    \n",
-    "    S: TimeSeries\n",
-    "    I: TimeSeries\n",
+    "    \"\"\"\n",
+    "    Plot the results of a SIR model.\n",
     "    \"\"\"\n",
     "    plot(S, '--', label='Susceptible')\n",
     "    plot(I, '-', label='Infected')\n",
@@ -300,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -324,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -397,7 +323,8 @@
     }
    ],
    "source": [
-    "print (results.T)"
+    "print (results.T)\n",
+    "#prints all of the years so that I can see when it stops running and therefore when the chronic number passes 50 people. "
    ]
   },
   {
