--- a/code/chap20mine.ipynb
+++ b/code/chap20mine.ipynb
@@ -1468,22 +1468,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "64.55373144207937"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "64.55373144207937 days\n"
+     ]
     }
    ],
    "source": [
-    "t_event = get_last_label(results) "
+    "t_event = get_last_label(results) \n",
+    "print(t_event, \"days\")"
    ]
   },
   {
